--- a/PizzaLoveApp.Business/PizzaLoveApp.Business.csproj
+++ b/PizzaLoveApp.Business/PizzaLoveApp.Business.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Abstract\" />
-    <Folder Include="Concrete\" />
+    <ProjectReference Include="..\PizzaLoveApp.DataAccess\PizzaLoveApp.DataAccess.csproj" />
+    <ProjectReference Include="..\PizzaLoveApp.Entity\PizzaLoveApp.Entites.csproj" />
   </ItemGroup>
 
 </Project>
