--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/PizzaLoveApp.DataAccess/Migrations/20210613071658_CreateDatabase.cs
+/PizzaLoveApp.DataAccess/Migrations/20210613071658_CreateDatabase.Designer.cs
