Added pizzasize tables

--- a/PizzaLoveApp.Business/PizzaLoveApp.Business.csproj
+++ b/PizzaLoveApp.Business/PizzaLoveApp.Business.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PizzaLoveApp.DataAccess\PizzaLoveApp.DataAccess.csproj" />
-    <ProjectReference Include="..\PizzaLoveApp.Entity\PizzaLoveApp.Entites.csproj" />
+    <ProjectReference Include="..\PizzaLoveApp.Entity\PizzaLoveApp.Entities.csproj" />
   </ItemGroup>
 
 </Project>
