Added PizzaSize DB

--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,5 @@ FodyWeavers.xsd
 /PizzaLoveApp.DataAccess/Migrations/20210613071658_CreateDatabase.cs
 /PizzaLoveApp.DataAccess/Migrations/20210613071658_CreateDatabase.Designer.cs
 /PizzaLoveApp.WebUI/wwwroot
+/PizzaLoveApp.DataAccess/Migrations/20210620104917_CreateDatabase.cs
+/PizzaLoveApp.DataAccess/Migrations/20210620104917_CreateDatabase.Designer.cs
