Added pizzasize and price tables and connect with product and pizzasize tables

--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,5 @@ FodyWeavers.xsd
 /PizzaLoveApp.WebUI/wwwroot
 /PizzaLoveApp.DataAccess/Migrations/20210620104917_CreateDatabase.cs
 /PizzaLoveApp.DataAccess/Migrations/20210620104917_CreateDatabase.Designer.cs
+/PizzaLoveApp.DataAccess/Migrations/20210620120109_CreateDatabase.cs
+/PizzaLoveApp.DataAccess/Migrations/20210620120109_CreateDatabase.Designer.cs
