--- a/.gitignore
+++ b/.gitignore
@@ -369,3 +369,4 @@ FodyWeavers.xsd
 /PizzaLoveApp.DataAccess/Migrations/20210620120109_CreateDatabase.cs
 /PizzaLoveApp.DataAccess/Migrations/20210620120109_CreateDatabase.Designer.cs
 /PizzaLoveApp.DataAccess/Migrations
+/PizzaLoveApp.WebUI/Migrations
