Added API ProductList, CategoryList, ProductListWithCategoryName

--- a/PizzaLoveApp.WebUI/Properties/launchSettings.json
+++ b/PizzaLoveApp.WebUI/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "PizzaLoveApp.WebUI": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "home",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
