Fixed footer, Added google maps, added seedIdentity.cs

--- a/PizzaLoveApp.WebUI/appsettings.json
+++ b/PizzaLoveApp.WebUI/appsettings.json
@@ -2,6 +2,17 @@
     "ConnectionStrings": {
         "IdentityConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ShopApp;Trusted_Connection=true"
     },
+
+    "Data": {
+        "AdminUser": {
+            "username": "admin",
+            "password": "Adminuser_1234",
+            "email": "adminuser@shopapp.com",
+            "role": "admin"
+        }
+    },
+
+
     "Logging": {
         "LogLevel": {
             "Default": "Information",
