Added email service, forgot email, reset email, accessdenided

--- a/PizzaLoveApp.WebUI/appsettings.json
+++ b/PizzaLoveApp.WebUI/appsettings.json
@@ -9,7 +9,13 @@
             "password": "Adminuser_1234",
             "email": "adminuser@shopapp.com",
             "role": "admin"
-        }
+        },
+        "EmailService": {
+            "mailHost": "smtp.gmail.com",
+            "mailPort": "587",
+            "mailUser": "test.emredemir@gmail.com",
+            "mailPass": "BhsY8x8D486kE57"
+        } 
     },
 
 
