--- a/PizzaLoveApp.WebUI/PizzaLoveApp.WebUI.csproj
+++ b/PizzaLoveApp.WebUI/PizzaLoveApp.WebUI.csproj
@@ -455,6 +455,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="IyzipayCore" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.7" />
